# sgraph

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
.github/workflows/: rust-test.yml
indexer/: .env.dev  README.md  api.go  go.mod  go.sum  main.go  processor.go
indexer/cli/: blockloader_gen.go  cli.go  cli_easyjson.go
indexer/mocks/: redis.go  rpc.go
indexer/repo/: mongo.go  redis.go
indexer/srv/: srv.go
indexer/types/: relation.go
programs/graph/: Cargo.toml  README.md
programs/graph/src/: lib.rs
programs/graph/tests/: functional.rs
programs/usersig/: Cargo.toml  README.md  build.rs
programs/usersig/cli/: initProvider.ts  signRelation.ts
programs/usersig/src/: lib.rs
sdk/go/: go.mod  go.sum  graph_gen.go
sdk/js/: .solitarc.js  index.ts  package.json
sdk/js/_examples/: full.ts
sdk/js/cli/: initTree.ts
sdk/js/idl/: graph.json
tests/: graph.js
