[package]
name = "graph"
version = "0.5.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "graph"
doctest = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = ["client", "cpi"]
client = ["solana-sdk"]

[dependencies]
anchor-lang = "0.26"
solana-program = "~1.14.9"
solana-sdk = { version = "~1.14.9", default-features = false, optional = true }
solana-security-txt = "1.1.0"
spl-account-compression = {version = "0.1.8", features = ["no-entrypoint", "cpi"]}

[dev-dependencies]
solana-sdk = { version = "~1.14.9", default-features = false }
solana-program-test = "~1.14.9"
solana-logger = "~1.14.9"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
anyhow = "1"
spl-noop = "0.1.3"