[package]
name = "sgraph-usersig"
version = "0.1.0"
description = "Created with Anchor"
license = "Apache-2.0"
documentation = "https://docs.rs/sgraph-usersig"
homepage = "https://sgraph.io"
repository = "https://github.com/sgraph-protocol/sgraph"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usersig"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
sgraph = {path = "../graph", version = "0.1.0", features = ["cpi"]}
solana-security-txt = "1.1.0"
